--- a/Resources/Prototypes/_CP14/Entities/Markers/ExpeditionShipTarget.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/ExpeditionShipTarget.yml
@@ -3,6 +3,7 @@
   parent: MarkerBase
   name: Expedition ship target point
   description: One of the possible arrival points of a ship carrying players
+  categories: [ ForkFiltered ]
   components:
     - type: CP14ExpeditionShipFTLTarget
     - type: Sprite
