--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Constrained/test_xeno.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Constrained/test_xeno.yml
@@ -3,6 +3,7 @@
   abstract: true
   parent: MarkerBase
   description: lol
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     layers:
