--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Biome/biomeSpawner.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Biome/biomeSpawner.yml
@@ -4,6 +4,7 @@
   abstract: true
   placement:
     mode: SnapgridCenter
+  categories: [ ForkFiltered ]
   components:
   - type: Transform
     anchored: true
