--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/battle_royale_temp.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/battle_royale_temp.yml
@@ -4,8 +4,7 @@
   suffix: Weapon
   description: lol
   parent: MarkerBase
-  categories:
-  - Spawner
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     layers:
@@ -47,8 +46,7 @@
   suffix: Tools
   description: lol
   parent: MarkerBase
-  categories:
-  - Spawner
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     layers:
