--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/herbal_gather.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/herbal_gather.yml
@@ -2,8 +2,7 @@
   id: CP14RandomSpawnerGatherAgaricShroom
   name: agaric shroom spawner
   parent: MarkerBase
-  categories:
-  - Spawner
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     layers:
