--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/misc.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/misc.yml
@@ -2,8 +2,7 @@
   id: CP14RandomDirtLootSpawner
   name: dirt spawner
   parent: CP14DirtEffect
-  categories:
-  - Spawner
+  categories: [ ForkFiltered ]
   components:
   - type: RandomSpawner
     prototypes:
