--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/animals.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/animals.yml
@@ -3,6 +3,7 @@
   parent: SimpleMobBase
   name: rabbit
   description: A little fluffy rabbit. I could eat it.
+  categories: [ ForkFiltered ]
   components:
   - type: HTN
     rootTask:
