--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/base.yml
@@ -5,6 +5,7 @@
   - MobDamageable
   - MobCombat
   id: CP14BaseMobSpecies
+  categories: [ ForkFiltered ]
   abstract: true
   components:
   - type: Sprite
