--- a/Resources/Prototypes/_CP14/Entities/Objects/Bureaucracy/paper.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Bureaucracy/paper.yml
@@ -1,6 +1,7 @@
 - type: entity
   parent: BaseItem
   id: CP14BasePaper
+  categories: [ ForkFiltered ]
   abstract: true
   components:
   - type: Paper
