--- a/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Drinks/bottles.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Drinks/bottles.yml
@@ -4,6 +4,7 @@
   parent: CP14BaseVial
   id: CP14GreenBottle
   suffix: Empty
+  categories: [ ForkFiltered ]
   description: A green bottle perfect for drinking beer.
   components:
   - type: Openable
