--- a/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/plate.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/plate.yml
@@ -3,6 +3,7 @@
   parent: BaseItem
   abstract: true
   description: This is your plate for a delicious meal!
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     sprite: _CP14/Objects/Consumable/Food/plates.rsi
