--- a/Resources/Prototypes/_CP14/Entities/Objects/Economy/wallet.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Economy/wallet.yml
@@ -3,6 +3,7 @@
   description: A small wallet, handy for storing coins.
   id: CP14Wallet
   parent: BaseStorageItem
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     sprite: /Textures/_CP14/Objects/Economy/wallet.rsi
