--- a/Resources/Prototypes/_CP14/Entities/Objects/Flora/farm.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Flora/farm.yml
@@ -3,6 +3,7 @@
   parent: ProduceBase
   name: wheat bushel
   description: You have the choice of either planting the grains again or grinding them into flour.
+  categories: [ ForkFiltered ]
   components:
   - type: Item
     size: Tiny
