--- a/Resources/Prototypes/_CP14/Entities/Objects/Flora/flowers.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Flora/flowers.yml
@@ -2,6 +2,7 @@
   id: CP14FlowersBase
   parent: FoodProduceBase
   abstract: true
+  categories: [ ForkFiltered ]
   components:
   - type: Tag
     tags:
