--- a/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vials.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vials.yml
@@ -2,6 +2,7 @@
   parent: BaseItem
   id: CP14BaseVial
   abstract: true
+  categories: [ ForkFiltered ]
   components:
   - type: MeleeWeapon
     soundNoDamage:
