--- a/Resources/Prototypes/_CP14/Entities/Objects/Specific/Thaumaturgy/crystal.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Specific/Thaumaturgy/crystal.yml
@@ -3,6 +3,7 @@
   parent: BaseItem
   abstract: true
   description: A crystal shard capable of storing magical energy.
+  categories: [ ForkFiltered ]
   components:
   - type: CP14MagicEnergyCrystal
   - type: Item
