--- a/Resources/Prototypes/_CP14/Entities/Objects/Tools/sharpening_stone.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Tools/sharpening_stone.yml
@@ -2,6 +2,7 @@
   id: CP14BaseSharpeningStone
   name: sharpening stone
   description: Allows you to sharpen blunted weapons. If you overdo it, you may well sharpen the weapon completely.
+  categories: [ ForkFiltered ]
   parent: BaseItem
   components:
   - type: Item
