--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Ranged/Ammunition/crossbowBolts.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Ranged/Ammunition/crossbowBolts.yml
@@ -1,6 +1,7 @@
 - type: entity
   parent: BaseArrow
   id: CP14BaseCrossbolt
+  categories: [ ForkFiltered ]
   abstract: true
   components:
   - type: Tag
