--- a/Resources/Prototypes/_CP14/Entities/Structures/Decorations/painting.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Decorations/painting.yml
@@ -2,6 +2,7 @@
   id: CP14BaseWallmountPainting
   parent: CP14BaseWallmount
   abstract: true
+  categories: [ ForkFiltered ]
   components:
   - type: Damageable
     damageContainer: Inorganic
