--- a/Resources/Prototypes/_CP14/Entities/Structures/Decorations/statues.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Decorations/statues.yml
@@ -3,6 +3,7 @@
   parent: BaseStructure
   name: statue of Gob
   description: It's beautiful.
+  categories: [ ForkFiltered ]
   suffix: Normal
   components:
   - type: Sprite
