--- a/Resources/Prototypes/_CP14/Entities/Structures/Doors/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Doors/base.yml
@@ -1,6 +1,7 @@
 - type: entity
   parent: BaseMaterialDoorNavMap
   id: CP14BaseDoor
+  categories: [ ForkFiltered ]
   abstract: true
   components:
   - type: Sprite
