--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/Gatherable/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/Gatherable/base.yml
@@ -2,6 +2,7 @@
   id: CP14GatherableBase
   parent: BaseStructure
   abstract: true
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     snapCardinals: true
