--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/grasshighbush.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/grasshighbush.yml
@@ -2,6 +2,7 @@
   id: CP14HighBush
   name: high bush
   parent: CP14BaseFlammableSpreading
+  categories: [ ForkFiltered ]
   description: Very tall and dense thickets. Perhaps someone is watching you from them
   components:
   - type: CP14WaveShader
