--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/beds.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/beds.yml
@@ -5,6 +5,7 @@
   - BaseStructure
   - CP14BaseFlammableSpreading
   description: Wooden bed. Better than nothing.
+  categories: [ ForkFiltered ]
   components:
   - type: HealOnBuckle
     damage:
