--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/chairs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/chairs.yml
@@ -2,6 +2,7 @@
   name: wooden chair
   description: Made of the most common planks. Simple and effective!    
   id: CP14ChairWooden
+  categories: [ ForkFiltered ]
   parent: 
   - UnanchoredChairBase
   - CP14BaseFlammable
