--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/curtains.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/curtains.yml
@@ -1,6 +1,7 @@
 - type: entity
   id: CP14BaseCurtains
   abstract: true
+  categories: [ ForkFiltered ]
   parent:
   - BaseStructure
   - CP14BaseFlammableSpreadingStrong
