--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/tables.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/tables.yml
@@ -3,6 +3,7 @@
   - BaseStructure
   - CP14BaseFlammable
   id: CP14WoodenTableBase
+  categories: [ ForkFiltered ]
   abstract: true
   components:
   - type: Fixtures
