--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/wallmount.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/wallmount.yml
@@ -1,6 +1,7 @@
 - type: entity
   id: CP14BaseWallmount
   abstract: true
+  categories: [ ForkFiltered ]
   placement:
     mode: SnapgridCenter
   components:
