--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
@@ -2,6 +2,7 @@
   parent:
   - BaseStructure
   id: CP14BaseWorkbench
+  categories: [ ForkFiltered ]
   abstract: true
   components:
   - type: Sprite
