--- a/Resources/Prototypes/_CP14/Entities/Structures/Specific/Alchemy/heater.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Specific/Alchemy/heater.yml
@@ -1,6 +1,7 @@
 - type: entity
   id: CP14BaseFireplace
   parent: BaseStructure
+  categories: [ ForkFiltered ]
   abstract: true
   components:
   - type: InteractionOutline
