--- a/Resources/Prototypes/_CP14/Entities/Structures/Specific/Farming/soil.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Specific/Farming/soil.yml
@@ -1,6 +1,7 @@
 - type: entity
   id: CP14BaseFarmingSoil
   abstract: true
+  categories: [ ForkFiltered ]
   placement:
     mode: SnapgridCenter
   components:
