--- a/Resources/Prototypes/_CP14/Entities/Structures/Storage/Crates/crates.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Storage/Crates/crates.yml
@@ -2,6 +2,7 @@
   id: CP14BaseCrate
   abstract: true
   parent: BaseStructureDynamic
+  categories: [ ForkFiltered ]
   components:
   - type: InteractionOutline
   - type: Damageable
