--- a/Resources/Prototypes/_CP14/Entities/Structures/Walls/directional_plate.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Walls/directional_plate.yml
@@ -1,6 +1,7 @@
 - type: entity
   id: CP14DirectionalPlateBase
   abstract: true
+  categories: [ ForkFiltered ]
   parent: BaseStructure
   name: plate
   placement:
