--- a/Resources/Prototypes/_CP14/Entities/Structures/Windows/windows.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Windows/windows.yml
@@ -2,6 +2,7 @@
   id: CP14WindowBase
   abstract: true
   parent: Window
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     drawdepth: Mobs
