--- a/Resources/Prototypes/_CP14/Entities/Structures/chasm.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/chasm.yml
@@ -1,5 +1,6 @@
 ﻿- type: entity
   id: CP14Chasm
+  categories: [ ForkFiltered ]
   name: chasm
   description: You can't even see the bottom.
   placement:
