--- a/Resources/Prototypes/_CP14/Entities/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/base.yml
@@ -1,6 +1,7 @@
 - type: entity
   id: CP14BaseFlammable
   abstract: true
+  categories: [ ForkFiltered ]
   components:
   - type: CP14FlammableAmbientSound
   - type: AmbientSound
