--- a/Resources/Prototypes/_CP14/Entities/fire.yml
+++ b/Resources/Prototypes/_CP14/Entities/fire.yml
@@ -2,6 +2,7 @@
   id: CP14Fire
   name: fire
   description: it's fire!
+  categories: [ ForkFiltered ]
   suffix: cp14
   placement:
     mode: SnapgridCenter
