--- a/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/tools.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/tools.yml
@@ -3,6 +3,7 @@
   id: CP14Cauldron
   name: cauldron
   description: A heavy cauldron. It is not as bulky as a vat, but can be carried in your hands.
+  categories: [ ForkFiltered ]
   components:
   - type: Item
     size: Ginormous
@@ -74,6 +75,7 @@
   name: pestle
   description: A device for conveniently grinding various materials into liquid
   parent: BaseItem
+  categories: [ ForkFiltered ]
   components:
   - type: Tag
     tags: 
@@ -94,6 +96,7 @@
   name: mortar
   description: Alchemical sturdy plate for grinding reagents
   parent: BaseStorageItem
+  categories: [ ForkFiltered ]
   components:
   - type: Item
     size: Normal
@@ -166,6 +169,7 @@
   id: CP14Dropper
   name: dropper
   description: Small dropper for managing very small values of liquids
+  categories: [ ForkFiltered ]
   components:
   - type: MixableSolution
     solution: vial
