--- a/Resources/Prototypes/_CP14/Entities/Objects/Specific/Farming/seeds.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Specific/Farming/seeds.yml
@@ -2,6 +2,7 @@
   id: CP14BaseSeed
   parent: BaseItem
   abstract: true
+  categories: [ ForkFiltered ]
   components:
   - type: Item
     size: Tiny
