--- a/Resources/Prototypes/_CP14/Entities/Objects/Tools/bucket.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Tools/bucket.yml
@@ -3,6 +3,7 @@
   id: CP14Bucket
   name: bucket
   description: It's a boring old bucket.
+  categories: [ ForkFiltered ]
   suffix: CP14
   components: 
   - type: Drink
