--- a/Resources/Prototypes/_CP14/Entities/Structures/Doors/door_frames.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Doors/door_frames.yml
@@ -1,6 +1,7 @@
 - type: entity
   parent: BaseStructure
   id: CP14BaseDoorFrame
+  categories: [ ForkFiltered ]
   abstract: true
   components:
   - type: InteractionOutline
