--- a/Resources/Prototypes/_CP14/Entities/Structures/Fence/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Fence/base.yml
@@ -1,6 +1,7 @@
 - type: entity
   parent: BaseStructure
   id: CP14BaseFence
+  categories: [ ForkFiltered ]
   abstract: true
   components:
   - type: MeleeSound
