--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/pallets.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/pallets.yml
@@ -1,6 +1,7 @@
 - type: entity
   id: CP14BasePallets
   abstract: true
+  categories: [ ForkFiltered ]
   placement:
     mode: SnapgridCenter
   components:
