--- a/Resources/Prototypes/_CP14/Entities/Structures/Specific/Thaumaturgy/pilon.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Specific/Thaumaturgy/pilon.yml
@@ -1,6 +1,7 @@
 - type: entity
   id: CP14BaseCrystalSlot #TODO переструктуризовать объекты
   abstract: true
+  categories: [ ForkFiltered ]
   components:
   - type: CP14MagicEnergyCrystalSlot
     slotId: crystal_slot
