--- a/Resources/Prototypes/_CP14/Entities/Structures/Storage/Crates/base_chest.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Storage/Crates/base_chest.yml
@@ -1,7 +1,7 @@
 - type: entity
   parent: BaseStructureDynamic
   id: CP14ChestGeneric
-  categories: [ HideSpawnMenu ]
+  categories: [ HideSpawnMenu, ForkFiltered ]
   name: Chest
   description: Chest.
   components:
