--- a/Resources/Prototypes/_CP14/Entities/Structures/test.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/test.yml
@@ -3,6 +3,7 @@
   id: CP14TravelingShop
   name: city trading information board
   description: Allows you to track what the city is selling and buying right now. 
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     snapCardinals: true
