--- a/Resources/Prototypes/_CP14/Entities/locks.yml
+++ b/Resources/Prototypes/_CP14/Entities/locks.yml
@@ -1,6 +1,7 @@
 - type: entity
   parent: BaseItem
   abstract: true
+  categories: [ ForkFiltered ]
   id: CP14BaseLock
   name: steel lock
   description: It locks things up. And you'll need a key to open them back up.
